welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:27: error: Unmatched closing brace '}' ignored here
 }
 ^